# solana-escrow-battle-royale

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
anchor/: Anchor.toml
anchor/programs/game-stake/: Cargo.toml
anchor/programs/game-stake/src/: lib.rs
src/: App.jsx  index.css  main.jsx
src/components/: CharacterController.jsx  Experience.jsx  GameUI.jsx  Leaderboard.jsx  Map.jsx  SafeZone.jsx  StakeModal.jsx  WalletConnect.jsx
src/lib/: idl.js  solana.js
